fixed spacing issue in storepage

--- a/react-app/src/components/StorePage/storepage.css
+++ b/react-app/src/components/StorePage/storepage.css
@@ -195,7 +195,7 @@
 .after-menu-container {
 	margin-top: 75px;
 	border-bottom: 4px solid #292421;
-	padding-bottom: 40px;
+	padding-bottom: 75px;
 	display: flex;
 }
 
